--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libraries/Parse-1.7.1.jar')
     compile files('libraries/bolts-android-1.1.3.jar')
+    compile 'com.android.support:support-v4:20.0.0'
 }
