--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile files('libraries/Parse-1.7.1.jar')
     compile files('libraries/bolts-android-1.1.3.jar')
     compile 'com.android.support:support-v4:20.0.0'
+    compile 'com.mcxiaoke.volley:library:1.0.7'
 }
