--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libraries/Parse-1.7.1.jar')
     compile files('libraries/bolts-android-1.1.3.jar')
-    compile 'com.android.support:support-v4:20.0.0'
-    compile 'com.mcxiaoke.volley:library:1.0.7'
+    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.0.0@aar'
 }
