--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,10 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name">
         <activity
-            android:theme="@android:style/Theme.DeviceDefault"
-            android:name=".DrawerActivity"
+            android:theme="@style/AppTheme"
+            android:name=".MenuFiles.NavigationDrawerTest"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,13 +19,20 @@
             </intent-filter>
 
         </activity>
-        <!--<activity
+
+        <!---<activity
             android:name=".Post"
-            android:label="@string/subir_datos" />
+            android:label="@string/subir_datos" />-->
         <activity
-            android:name=".Get"
-            android:label="@string/bajar_datos" />
-        <activity
+            android:name=".ViewPagerFiles.MainFragmentActivity"
+            android:label="@string/bajar_datos"
+            android:parentActivityName=".MenuFiles.NavigationDrawerTest" >
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.myfirstapp.MainActivity" />
+        </activity>
+        <!--<activity
             android:name=".DrawerActivity"
             android:label="@string/title_activity_drawer" >
         </activity>-->
