--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
+    compileSdkVersion 19
     buildToolsVersion "20.0.0"
 
     defaultConfig {
@@ -25,4 +25,5 @@ dependencies {
     compile files('libraries/bolts-android-1.1.3.jar')
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.0.0@aar'
+    compile 'com.google.android.gms:play-services:6.1.+'
 }
