--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jonaxel.testparse" >
+    package="com.jonaxel.testparse">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppTheme"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".MenuFiles.NavigationDrawerTest"
-            android:label="@string/app_name" >
+            android:name="com.jonaxel.testparse.MenuFiles.NavigationDrawerTest"
+            android:label="@string/app_name">
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".SearchResultActivity" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
-        <!---<activity
-            android:name=".Post"
-            android:label="@string/subir_datos" />-->
+        <!-- Search results activity -->
         <activity
+            android:name=".SearchResultActivity"
+            android:parentActivityName=".MenuFiles.NavigationDrawerTest">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+
+
+        <!--<activity
             android:name=".ViewPagerFiles.MainFragmentActivity"
             android:label="@string/bajar_datos"
             android:parentActivityName=".MenuFiles.NavigationDrawerTest" >
-            <!-- Parent activity meta-data to support 4.0 and lower -->
+             Parent activity meta-data to support 4.0 and lower
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.myfirstapp.MainActivity" />
         </activity>
-        <!--<activity
+        <activity
             android:name=".DrawerActivity"
             android:label="@string/title_activity_drawer" >
         </activity>-->
