--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,44 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jonaxel.testparse">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <permission
+        android:name="com.jonaxel.mapshelloworld.pemission.MAPS_RECIEVE"
+        android:protectionLevel="signature"/>
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
+    <uses-permission
+        android:name="org.example.ejemplogooglemaps.permission.MAPS_RECEIVE"/>
+
+    <uses-permission
+        android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDLuOIM2pWEbX6OuDUWIggd3cmph8LzDN4"/>
+
         <activity
             android:name="com.jonaxel.testparse.MenuFiles.NavigationDrawerTest"
             android:label="@string/app_name">
